--- a/sql_ws/Python_with_CSV.ipynb
+++ b/sql_ws/Python_with_CSV.ipynb
@@ -305,7 +305,9 @@
    "source": [
     "### 4. INSERT Query\n",
     "\n",
-    "- pandas.DataFrame 형태의 데이터를 police_station Table의 Tuple 데이터로 넣기 위한 INSERT Query문을 만든다."
+    "- pandas.DataFrame 형태의 데이터를 police_station Table의 Tuple 데이터로 넣기 위한 INSERT Query문을 만든다.\n",
+    "\n",
+    "- 참고: https://dev.mysql.com/doc/connector-python/en/connector-python-api-mysqlcursor.html"
    ]
   },
   {
