--- a/coursework/[DS]22기_SQL1_sonyunjae.ipynb
+++ b/coursework/[DS]22기_SQL1_sonyunjae.ipynb
@@ -178,7 +178,9 @@
    "source": [
     "문제 2.\n",
     "\n",
-    "스타벅스 이디야 데이터를 저장할 테이블을 다음의 구조로 생성하세요. (PDF 파일 참고)"
+    "스타벅스 이디야 데이터를 저장할 테이블을 다음의 구조로 생성하세요. (PDF 파일 참고)\n",
+    "\n",
+    "<img src=\"https://github.com/ElaYJ/Study_SQL/assets/153154981/277625d7-835f-45c0-af87-cbb5d9639283\" width=\"50%\" height=\"50%\">"
    ]
   },
   {
