--- a/coursework/[DS]22기_SQL2_sonyunjae.ipynb
+++ b/coursework/[DS]22기_SQL2_sonyunjae.ipynb
@@ -98,6 +98,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 풀이 : 모두 NOT NULL 붙여주기\n",
+    "\n",
     "query = \"\"\"\n",
     "CREATE TABLE gas_station(\n",
     "\tid int NOT NULL AUTO_INCREMENT PRIMARY KEY,\n",
@@ -148,6 +150,20 @@
     "cursor.execute(query, (4, \"S-OIL\"))\n",
     "cursor.execute(query, (5, \"알뜰주유소\"))\n",
     "cursor.execute(query, (6, \"자가상표\"))\n",
+    "conn.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 풀이\n",
+    "\n",
+    "query = \"INSERT INTO gas_brand (name) VALUES ('SK에너지'), ('현대오일뱅크'), ('GS칼텍스'), ('S-OIL'), ('알뜰주유소'), ('자가상표')\"\n",
+    "\n",
+    "cursor.execute(query)\n",
     "conn.commit()"
    ]
   },
@@ -633,6 +649,32 @@
     "\n",
     "rlt = get_brand_id(\"SK에너지\")\n",
     "print(rlt, type(rlt))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 풀이 ⭐\n",
+    "\n",
+    "dict_cursor = conn.cursor(dictionary=True) #--> 커서의 리턴값을 dict형으로 만들어 준다.\n",
+    "\n",
+    "dict_cursor(\"SELECT * FROM gas_station\")\n",
+    "gas_brand = dict_cursor.fetchall() #--> gas_brand는 dict형이다.\n",
+    "\n",
+    "\n",
+    "def getBrandID(brandName):\n",
+    "    if brandName == \"알뜰(ex)\":\n",
+    "        brandName = \"알뜰주유소\"\n",
+    "    \n",
+    "    for item in gas_brand:\n",
+    "        if item['name'] == brandName:\n",
+    "            return item['id']\n",
+    "        return -1\n",
+    "\n",
+    "# dict_cursor.close()"
    ]
   },
   {
@@ -2416,6 +2458,30 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 풀이 - 위도 경도 거리계산 sql\n",
+    "\"\"\"\n",
+    "SELECT *, (6371*acos(cos(radians(위도1))*cos(radians(위도2))*cos(radians(경도2)-radians(경도1))+sin(radians(위도1))*sin(radians(위도2)))) AS dist\n",
+    "FORM 테이블명 HAVING dist <= 200/1000 --> 거리 조건을 달수도 있다.\n",
+    "\"\"\"\n",
+    "# 주유소 아이디, 주유소 브랜드명, 주유소 매장명, 주소, 미왕빌딩으로 부터의 거리 (km)\n",
+    "\n",
+    "query = '''\n",
+    "SELECT s.id, b.name, s.name, s.address, \n",
+    "(6371*acos(cos(radians(37.4955366))*cos(radians(s.lat))*cos(radians(s.lng)-radians(127.0293521))+sin(radians(37.4955366))*sin(radians(s.lat)))) distance\n",
+    "FROM gas_station s, gas_brand b WHERE s.brand=b.id ⭐HAVING distance <= 1⭐ ORDER BY distance\n",
+    "'''\n",
+    "cursor.execute(query)\n",
+    "result = cursor.fetchall()\n",
+    "for row in result:\n",
+    "    print(row)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "id": "7iCUge05urv1"
@@ -2643,6 +2709,44 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 풀이\n",
+    "\n",
+    "# Step 1. 조건을 모두 만족하고 거리로 정렬해 Top 10개를 가져오는 쿼리문\n",
+    "query = '''\n",
+    "SELECT s.id, b.name, s.name, s.address, s.gasoline, s.self, s.24_hours, s.convenience_store,\n",
+    "(6371*acos(cos(radians(37.4955366))*cos(radians(s.lat))*cos(radians(s.lng)-radians(127.0293521))+sin(radians(37.4955366))*sin(radians(s.lat)))) distance\n",
+    "FROM gas_brand b, gas_station s\n",
+    "WHERE b.id=s.brand AND s.self=1 AND s.24_hours=1 AND s.convenience_store=1\n",
+    "ORDER BY distance LIMIT 10\n",
+    "'''\n",
+    "\n",
+    "# Step 2. 위에서 만든 쿼리문 전체를 Table로 만든다. ⭐ 서브 쿼리 생성\n",
+    "query = '''\n",
+    "FROM (SELECT s.id, b.name, s.name, s.address, s.gasoline, s.self, s.24_hours, s.convenience_store,\n",
+    "\t\t(6371*acos(cos(radians(37.4955366))*cos(radians(s.lat))*cos(radians(s.lng)-radians(127.0293521))+sin(radians(37.4955366))*sin(radians(s.lat)))) distance\n",
+    "\t\tFROM gas_brand b, gas_station s\n",
+    "\t\tWHERE b.id=s.brand AND s.self=1 AND s.24_hours=1 AND s.convenience_store=1\n",
+    "\t\tORDER BY distance LIMIT 10) table\n",
+    "'''\n",
+    "\n",
+    "# Step 3. 서브 쿼리로 만든 테이블에서 다시 SELECT\n",
+    "query = '''\n",
+    "SELECT t.id, t.brand, t.name, t.address, t.gasoline, t.self, t.24_hours, t.convenience_store, t.ditance\n",
+    "FROM (SELECT s.id id, b.name brand, s.name name, s.address, s.gasoline, s.self, s.24_hours, s.convenience_store,\n",
+    "\t\t(6371*acos(cos(radians(37.4955366))*cos(radians(s.lat))*cos(radians(s.lng)-radians(127.0293521))+sin(radians(37.4955366))*sin(radians(s.lat)))) distance\n",
+    "\t\tFROM gas_brand b, gas_station s\n",
+    "\t\tWHERE b.id=s.brand AND s.self=1 AND s.24_hours=1 AND s.convenience_store=1\n",
+    "\t\tORDER BY distance LIMIT 10) t\n",
+    "ORDER BY t.gasoline\n",
+    "'''"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "id": "toBTSAsVurv2"
@@ -2797,6 +2901,21 @@
     "df = pd.DataFrame(cursor.fetchall())\n",
     "df.columns = cursor.column_names\n",
     "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 풀이\n",
+    "\n",
+    "query = '''\n",
+    "SELECT s.gu, b.name, AVG(s.gasoline) FROM gas_brand b, gas_station s \n",
+    "WHERE b.id=s.brand \n",
+    "GROUP BY s.gu, b.nameORDER BY s.gu, AVG(s.gasoline)\n",
+    "'''"
    ]
   },
   {
